UI - fix icon coloring bleedthrough
icons no longer have a faint colored box around them (some now have a faint white outline)

--- a/server/public/CSS/stylesheet.css
+++ b/server/public/CSS/stylesheet.css
@@ -402,6 +402,7 @@ body {
 
 *:has(div.colorFilter) {
   position: relative;
+  isolation: isolate;
 }
 
 .colorFilter {
@@ -410,7 +411,7 @@ body {
   height: 100%;
   top: 0px;
   left: 0px;
-  mix-blend-mode: darken;
+  mix-blend-mode: multiply;
 }
 
 
